--- a/subclass_experiment/Train.ipynb
+++ b/subclass_experiment/Train.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import packages \n",
@@ -13,6 +15,7 @@
     "import os\n",
     "import shutil\n",
     "import math\n",
+    "import numpy as np\n",
     "\n",
     "folder_path=\"./dataset/subset/\"\n",
     "folders = glob(folder_path+'complete/*')\n",
@@ -23,21 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "complete\\BabyHat\n",
-      "complete\\BabyPants\n",
-      "complete\\BabyShirt\n",
-      "complete\\womencasualshoes\n",
-      "complete\\womenlongsleevetop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#split data to training and testing\n",
     "\n",
@@ -66,9 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -76,23 +74,23 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_3 (Conv2D)            (None, 62, 62, 32)        896       \n",
+      "conv2d_1 (Conv2D)            (None, 62, 62, 32)        896       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 31, 31, 32)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 31, 31, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 31, 31, 32)        0         \n",
+      "dropout_1 (Dropout)          (None, 31, 31, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 29, 29, 32)        9248      \n",
+      "conv2d_2 (Conv2D)            (None, 29, 29, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 14, 14, 32)        0         \n",
+      "dropout_2 (Dropout)          (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 6272)              0         \n",
+      "flatten_1 (Flatten)          (None, 6272)              0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 128)               802944    \n",
+      "dense_1 (Dense)              (None, 128)               802944    \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 5)                 645       \n",
+      "dense_2 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
       "Total params: 813,733\n",
       "Trainable params: 813,733\n",
@@ -143,60 +141,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8751 images belonging to 5 classes.\n",
-      "Found 3753 images belonging to 5 classes.\n",
-      "Epoch 1/30\n",
-      "500/500 [==============================] - 52s 104ms/step - loss: 1.3574 - acc: 0.4741 - val_loss: 0.8387 - val_acc: 0.7031\n",
-      "Epoch 2/30\n",
-      "500/500 [==============================] - 51s 102ms/step - loss: 1.0142 - acc: 0.6198 - val_loss: 0.7693 - val_acc: 0.7073\n",
-      "Epoch 3/30\n",
-      "500/500 [==============================] - 51s 102ms/step - loss: 0.9248 - acc: 0.6527 - val_loss: 0.6808 - val_acc: 0.7438\n",
-      "Epoch 4/30\n",
-      "500/500 [==============================] - 51s 101ms/step - loss: 0.8709 - acc: 0.6718 - val_loss: 0.6277 - val_acc: 0.7673\n",
-      "Epoch 5/30\n",
-      "500/500 [==============================] - 51s 102ms/step - loss: 0.8360 - acc: 0.6887 - val_loss: 0.5930 - val_acc: 0.7812\n",
-      "Epoch 6/30\n",
-      "500/500 [==============================] - 80s 160ms/step - loss: 0.7958 - acc: 0.7061 - val_loss: 0.6925 - val_acc: 0.7542\n",
-      "Epoch 7/30\n",
-      "500/500 [==============================] - 85s 170ms/step - loss: 0.7685 - acc: 0.7127 - val_loss: 0.6324 - val_acc: 0.7646\n",
-      "Epoch 8/30\n",
-      "500/500 [==============================] - 81s 162ms/step - loss: 0.7488 - acc: 0.7299 - val_loss: 0.5824 - val_acc: 0.7855\n",
-      "Epoch 9/30\n",
-      "500/500 [==============================] - 81s 162ms/step - loss: 0.7261 - acc: 0.7355 - val_loss: 0.6274 - val_acc: 0.7635\n",
-      "Epoch 10/30\n",
-      "500/500 [==============================] - 84s 168ms/step - loss: 0.7106 - acc: 0.7401 - val_loss: 0.6316 - val_acc: 0.7792\n",
-      "Epoch 11/30\n",
-      "500/500 [==============================] - 84s 169ms/step - loss: 0.6989 - acc: 0.7496 - val_loss: 0.5552 - val_acc: 0.7937\n",
-      "Epoch 12/30\n",
-      "500/500 [==============================] - 83s 166ms/step - loss: 0.6773 - acc: 0.7491 - val_loss: 0.5707 - val_acc: 0.7812\n",
-      "Epoch 13/30\n",
-      "500/500 [==============================] - 84s 168ms/step - loss: 0.6566 - acc: 0.7596 - val_loss: 0.5725 - val_acc: 0.7812\n",
-      "Epoch 14/30\n",
-      "500/500 [==============================] - 84s 168ms/step - loss: 0.6495 - acc: 0.7613 - val_loss: 0.6408 - val_acc: 0.7771\n",
-      "Epoch 15/30\n",
-      "500/500 [==============================] - 84s 167ms/step - loss: 0.6407 - acc: 0.7657 - val_loss: 0.5564 - val_acc: 0.7969\n",
-      "Epoch 16/30\n",
-      "500/500 [==============================] - 84s 169ms/step - loss: 0.6370 - acc: 0.7662 - val_loss: 0.5644 - val_acc: 0.8015\n",
-      "Epoch 17/30\n",
-      "500/500 [==============================] - 82s 164ms/step - loss: 0.6208 - acc: 0.7723 - val_loss: 0.5120 - val_acc: 0.8094\n",
-      "Epoch 18/30\n",
-      "500/500 [==============================] - 83s 167ms/step - loss: 0.6182 - acc: 0.7686 - val_loss: 0.5126 - val_acc: 0.8125\n",
-      "Epoch 19/30\n",
-      "500/500 [==============================] - 84s 169ms/step - loss: 0.6090 - acc: 0.7806 - val_loss: 0.5160 - val_acc: 0.8104\n",
-      "Epoch 20/30\n",
-      "500/500 [==============================] - 85s 170ms/step - loss: 0.5944 - acc: 0.7851 - val_loss: 0.5944 - val_acc: 0.7919\n",
-      "Epoch 21/30\n",
-      "500/500 [==============================] - 68s 136ms/step - loss: 0.5803 - acc: 0.7881 - val_loss: 0.4942 - val_acc: 0.8198\n",
-      "Epoch 22/30\n",
-      "500/500 [==============================] - 51s 101ms/step - loss: 0.5849 - acc: 0.7867 - val_loss: 0.6238 - val_acc: 0.7760\n",
-      "Epoch 23/30\n",
-      "500/500 [==============================] - 51s 101ms/step - loss: 0.5892 - acc: 0.7827 - val_loss: 0.4972 - val_acc: 0.8125\n",
-      "Epoch 24/30\n",
-      "500/500 [==============================] - 51s 102ms/step - loss: 0.5991 - acc: 0.7793 - val_loss: 0.4963 - val_acc: 0.8218\n",
-      "Epoch 25/30\n",
-      "500/500 [==============================] - 50s 101ms/step - loss: 0.5667 - acc: 0.7962 - val_loss: 0.5766 - val_acc: 0.7958\n",
-      "Epoch 26/30\n",
-      "175/500 [=========>....................] - ETA: 30s - loss: 0.5667 - acc: 0.7956"
+      "Found 0 images belonging to 0 classes.\n",
+      "Found 0 images belonging to 0 classes.\n",
+      "Epoch 1/30\n"
      ]
     }
    ],
@@ -239,8 +186,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "classifier.save('cnn_82_5.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "classifier = load_model('cnn_82_5.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_pred = classifier.predict_generator(test_set)\n",
+    "y_pred_class = np.argmax(y_pred,axis = 1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "j = []\n",
+    "for i in test_set.filenames: \n",
+    "    j.append(i.split(\"\\\\\")[0])\n",
+    "le.fit(j)\n",
+    "valid_actual = le.transform(j)classifier = load_model('cnn_82_5.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[154 102 138 210 191]\n",
+      " [117  82 101 156 122]\n",
+      " [108  70 101 172 123]\n",
+      " [209 120 146 248 208]\n",
+      " [152 115 162 254 192]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.21      0.19      0.20       795\n",
+      "    class 1       0.17      0.14      0.15       578\n",
+      "    class 2       0.16      0.18      0.17       574\n",
+      "     class3       0.24      0.27      0.25       931\n",
+      "     class4       0.23      0.22      0.22       875\n",
+      "\n",
+      "avg / total       0.21      0.21      0.21      3753\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "confusion_mtx = confusion_matrix(valid_actual, y_pred_class) \n",
+    "print(confusion_mtx)\n",
+    "target_names = ['class 0', 'class 1', 'class 2', 'class3','class4']\n",
+    "print(classification_report(valid_actual, y_pred_class, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -261,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
